# PyDataCleaner

./: .gitignore  README.md  requirements.txt
prod/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
prod/docs/: Makefile  conf.py  example.ipynb  make.bat
prod/src/: __init__.py  detect_missing.py  encoder.py  feature_selector.py  outlier_detector.py  py_loader.py  pyreaders.py
prod/src/datasets/: exported.csv
prod/tests/: test_PyEhealth.py
pyDataCleaner/: README.md  cleaner.py  feature.ipynb  feature_selector.py
pyDataCleaner/.ipynb_checkpoints/: README-checkpoint.md  cleaner-checkpoint.py  feature-checkpoint.ipynb  feature_selector-checkpoint.py
pyDataCleaner/data-sets/.ipynb_checkpoints/: test-checkpoint.csv
pyDataCleaner/test/: Untitled.ipynb
pyDataCleaner/test/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
week-1/: Data Cleaning.ipynb  Readme.md
week-1/.ipynb_checkpoints/: Data Cleaning-checkpoint.ipynb
week-1/data-sets/: oil-spill.names  uscs_map_death_all.csv  uscs_map_incidence_all.csv
week-1/data-sets/.ipynb_checkpoints/: test-checkpoint.csv
